--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,23 @@ html{
 li a:hover {
     background-color: #111;
 }
+
+#relevantMenu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #333;
+}
+
+#relevantList {
+    text-align: center;
+    border-bottom: 1px solid #555;
+    
+}
+#relevantList a{
+    display: block;
+    color: white;
+    padding: 8px 16px;
+    text-decoration: none;
+}
