--- a/css/styles.css
+++ b/css/styles.css
@@ -26,28 +26,28 @@ body{
 }
 
 #relevantMenu {
-    
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 200px;
-    height: 100vh;
+    width: 25%;
     background-color: #333;
-    float: left;
+    position: fixed;
+    height: 100%;
     overflow: auto;
-    display: flex;
-    flex-direction: column;
 }
 
 #relevantList {
-    flex-grow: 1;
-    text-align: center;
-    border-bottom: 1px solid #555;
-    
-}
-#relevantList a{
     display: block;
-    color: white;
+    color: #000;
     padding: 8px 16px;
-    text-decoration: none;
-}
+    text-decoration: none;}
+    
+    #relevantList a.active {
+        background-color: #4CAF50;
+        color: white;
+    }
+    
+    #relevantList a:hover:not(.active) {
+        background-color: #555;
+        color: white;
+    }
