--- a/css/styles.css
+++ b/css/styles.css
@@ -4,26 +4,13 @@ html, body {
     min-height: 100%;
     height: 100%;
     font-family: sans-serif;
-    background: #333;
+    background: #993;
 }
 #wrapper {
     min-height: 100%;
     height: auto !important;
-    height: 100%;
-    margin: 0 auto -50px; /* the bottom margin is the negative value of the footer's height */
+    margin: 0 auto 0; /* the bottom margin is the negative value of the footer's height */
     position: relative
-}
-#footer {
-    height: 30px;
-    background-color: red;
-}
-#footer-content {
-    height: 25px; /* height + top/bottom paddding + top/bottom border must add up to footer height */
-    padding: 5px;
-}
-.push {
-    height: 50px;
-    clear: both;
 }
 
 #header {
@@ -34,7 +21,9 @@ html, body {
     padding: 0px;
 }
 #content {
-    height: 100%;
+    height: auto;
+    padding: 30px;
+    align-content: center;
 }
 
 #relevantMenu {
@@ -46,7 +35,8 @@ html, body {
     position: absolute;
     left: 0;
     top: 50px;
-    bottom: 50px;
+    bottom: 0px;
+    height: 110%;
 }
 
 #relevantList a {
@@ -72,12 +62,12 @@ html, body {
 
 #main {
     margin-left: 205px;
-    margin-bottom: -50px;
     float: left;
     position: absolute;
     overflow: hidden;
     width: auto;
-    height: 100%;
+    height: auto;
+    margin-right: 150px; 
 }
 
 #navBar {
@@ -105,3 +95,65 @@ html, body {
 #navList a:hover:not(.active) {
     background-color: #111;
 }
+
+#gameLogo {
+    height: 100px;
+    width: 300px;
+}
+
+.container {
+    width:800px;
+    height:450px;
+    position:relative;
+    overflow:hidden;
+    align-self: center;
+    align-content: center;
+  }
+  
+  .css-carousel {
+    width:500%;
+    -webkit-animation: css-carousel 20s linear infinite;
+    -moz-animation: css-carousel 20s linear infinite;
+    -ms-animation: css-carousel 20s linear infinite;
+    animation: css-carousel 20s linear infinite;
+    align-self: center;
+  }
+  
+  .css-carousel .css-img{
+    display:inline-block;
+    height: 450px;
+    width: 800px;
+  }
+  .css-carousel img:not(:first-child){
+    float:left;
+  }
+  
+  @-webkit-keyframes css-carousel {
+    0%, 23% {margin-left:0}
+    25%, 48% { margin-left:-100%; }
+    50%, 73% { margin-left:-200%; }
+    75%, 98% { margin-left:-300%;}
+    100% { margin-left:0;}
+      
+  }
+  @-moz-keyframes css-carousel {
+    0%, 23% {margin-left:0}
+    25%, 48% { margin-left:-100%; }
+    50%, 73% { margin-left:-200%; }
+    75%, 98% { margin-left:-300%;}
+    100% { margin-left:0;}
+  }
+  @-ms-keyframes css-carousel {
+    0%, 23% {margin-left:0}
+    25%, 48% { margin-left:-100%; }
+    50%, 73% { margin-left:-200%; }
+    75%, 98% { margin-left:-300%;}
+    100% { margin-left:0;}
+  }
+  @keyframes css-carousel {
+    0%, 23% {margin-left:0}
+    25%, 48% { margin-left:-100%; }
+    50%, 73% { margin-left:-200%; }
+    75%, 98% { margin-left:-300%;}
+    100% { margin-left:0;}
+  }
