--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@ html, body {
     font-family: sans-serif;
     background: #993;
 }
-
 #wrapper {
     min-height: 100%;
     height: auto !important;
@@ -158,3 +157,101 @@ html, body {
     75%, 98% { margin-left:-300%;}
     100% { margin-left:0;}
   }
+
+  .rainbow {
+    /* Chrome, Safari, Opera */
+   -webkit-animation: rainbow 1s infinite; 
+   
+   /* Internet Explorer */
+   -ms-animation: rainbow 1s infinite;
+   
+   /* Standar Syntax */
+   animation: rainbow 1s infinite; 
+ }
+ 
+ /* Chrome, Safari, Opera */
+ @-webkit-keyframes rainbow{
+     20%{color: red;}
+     40%{color: yellow;}
+     60%{color: green;}
+     80%{color: blue;}
+     100%{color: orange;}	
+ }
+ /* Internet Explorer */
+ @-ms-keyframes rainbow{
+     20%{color: red;}
+     40%{color: yellow;}
+     60%{color: green;}
+     80%{color: blue;}
+     100%{color: orange;}	
+ }
+ 
+ /* Standar Syntax */
+ @keyframes rainbow{
+     20%{color: red;}
+     40%{color: yellow;}
+     60%{color: green;}
+     80%{color: blue;}
+     100%{color: orange;}	
+ }
+
+ .fidgetSpinner {
+    float: left;
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 120px;
+    height: 120px;
+    margin-top: -60px;
+    margin-left: -60px;
+
+    -webkit-animation-name: spin;
+    -webkit-animation-duration: 4000ms;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+
+    -moz-animation-name: spin;
+    -moz-animation-duration: 4000ms;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+
+    -ms-animation-name: spin;
+    -ms-animation-duration: 4000ms;
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-timing-function: linear;
+
+    animation-name: spin;
+    animation-duration: 4000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;}
+
+    @-ms-keyframes spin { 
+        from { 
+            -ms-transform: rotate(0deg); 
+        } to { 
+            -ms-transform: rotate(360deg); 
+        }
+    }
+    @-moz-keyframes spin { 
+        from { 
+            -moz-transform: rotate(0deg); 
+        } to { 
+            -moz-transform: rotate(360deg); 
+        }
+    }
+    @-webkit-keyframes spin { 
+        from { 
+            -webkit-transform: rotate(0deg); 
+        } to { 
+            -webkit-transform: rotate(360deg); 
+        }
+    }
+    @keyframes spin { 
+        from { 
+            transform: rotate(0deg); 
+        } to { 
+            transform: rotate(360deg); 
+        }
+    }
+}
